syntax = "proto3";

import "const.proto";


package engine;

service AgentSkillApi {
    // POST /call_center/agent/:ID/skill
    rpc Create(AgentSkill) returns (AgentSkill) {}
    // GET /call_center/agent/:ID/skill
    rpc List(ListForItemRequest) returns (ListAgentSkill) {}
    // GET /call_center/agent/:ID/skill/:SKILL_ID
    rpc Get(AgentSkillItemReqeust) returns (AgentSkill) {}
    // PUT /call_center/agent/:ID/skill/:SKILL_ID
    rpc Update(AgentSkill) returns (AgentSkill) {}
    // DELETE /call_center/agent/:ID/skill/:SKILL_ID
    rpc Remove(AgentSkill) returns (AgentSkill) {}
}

message AgentSkillItemReqeust {
    int64 id = 1;
    int64 agent_id = 2;
    int64 domain_id = 3;
}

message AgentSkillItem {
    int64 id = 1;
    Lookup Skill = 2;
    int32 Capacity = 3;
}

message AgentSkill {
    int64 id = 1;
    int64 domain_id = 2;
    int64 created_at = 3;
    Lookup created_by = 4;
    int64 updated_at = 5;
    Lookup updated_by = 6;
    Lookup Agent = 7;
    Lookup Skill = 8;
    int32 Capacity = 9;
}

message ListAgentSkill {
    repeated AgentSkillItem items = 1;
}